--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="logout">logout</string>
     <string name="hint" />
     <string name="start">START</string>
+    <string name="stop">STOP</string>
+    <string name="time">TIME</string>
+    <string name="startDestination">hint</string>
+    <string name="set_time">SET TIME</string>
+    <string name="pick_time" />
 </resources>
