after back to github

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <string name="time">TIME</string>
     <string name="startDestination">hint</string>
     <string name="set_time">SET TIME</string>
-    <string name="pick_time" />
+    <string name="pick_time">SET TIME </string>
 </resources>
