--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_activity_maps">Map</string>
     <string name="map">Go to map</string>
     <string name="title_activity_driver">DriverActivity</string>
-    <string name="desitantion">Desitantion</string>
+    <string name="desitantion">Destination</string>
     <string name="starting_place">Starting place</string>
     <string name="phone_number">Phone Number</string>
     <string name="send_road">Send Road</string>
@@ -38,6 +38,9 @@
     <string name="hometown">HomeTown</string>
     <string name="przerwa">-</string>
     <string name="todoSecond">TODO</string>
+    <string name="date">Date</string>
+    <string name="distancefordriver">Distance for driver</string>
+    <string name="set_your_road">Set road</string>
 
 
 </resources>
